--- a/public/index.ejs
+++ b/public/index.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>
-        Hello <span style="color: red"><%= name %>, <%= email %></span>
+        <form action="page1" method="post">
+            <input type="text" id="firstName" name="firstName"><input type="text" id="lastName" name="lastName"><input type="submit" value="">
+        </form>
     </h1>
 </body>
 </html>
